# Valheim-Discord-Relay

./: .gitignore  CMakeLists.txt  README.md
include/: config.h  main.h
src/: config.cpp  main.cpp
